--- a/index.html
+++ b/index.html
@@ -203,20 +203,20 @@
 			</div>
 
 			<div class="columns is-multiline is-mobile">
-				<!-- Project 1 -->
+				<!-- LAB 1 -->
 				<div class="column">
-					<a href="https://github.com/solomiapobutska">
+					<a href="/lab-one.html">
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
-									#1
+								
 									<figure class="image project-figure">
 										<img src="assets/img/assignment.svg" alt="Image">
 									</figure>
 								</div>
 								<div>
 									<p>
-										Cartoon
+										LAB 1 
 									</p>
 								</div>
 							</article>
