--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="columns is-multiline is-mobile">
 				<!-- Project 1 -->
 				<div class="column">
-					<a href="/ass-one.html">
+					<a href="/pages/ass-one.html">
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
@@ -95,7 +95,7 @@
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
-									#2
+									
 									<figure class="image project-figure">
 										<img src="assets/img/assignment.svg" alt="Image">
 									</figure>
@@ -205,7 +205,7 @@
 			<div class="columns is-multiline is-mobile">
 				<!-- LAB 1 -->
 				<div class="column">
-					<a href="/lab-one.html">
+					<a href="../pages/lab-one.html">
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
@@ -229,14 +229,13 @@
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
-									#2
 									<figure class="image project-figure">
 										<img src="assets/img/assignment.svg" alt="Image">
 									</figure>
 								</div>
 								<div>
 									<p>
-										Animation
+										LAB 2
 									</p>
 								</div>
 							</article>
