--- a/pages/ass-one.html
+++ b/pages/ass-one.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" type="text/css" href="assets/css/ass-one.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+    <title>Cartoon</title>
+    <link rel="stylesheet" type="text/css" href="../assets/css/ass-one.css">
+    <link rel="stylesheet" type="text/css" href="../assets/css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <html>
@@ -11,7 +12,7 @@
         <canvas id="canvas" width="500" height="500"></canvas>        
     </body>
 
-    <script src="ass-one.js"></script>
+    <script src="../scripts/ass-one.js"></script>
     <div class="gist gist-data ">
         <script src="https://gist.github.com/solomiapobutska/100e48a4a7ed4a08d7ba8e5a345cfa70.js"></script>     
     </div>
