--- a/pages/lab-one.html
+++ b/pages/lab-one.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
     <head>
+        <title>Chart Program</title>
         <link rel="stylesheet" type="text/css" href="assets/css/lab-one.css">
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,7 +14,7 @@
      <h1>Chart Program</h1>
       <div>
 			<canvas id="canvas_chart" width="600" height="600"></canvas>
-			<script src="lab-one.js"></script>
+			<script src="../scripts/lab-one.js"></script>
       </div>
 </body>
 
