--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			<div class="columns is-multiline is-mobile">
 				<!-- Project 1 -->
 				<div class="column">
-					<a href="/pages/ass-one.html">
+					<a href="../pages/ass-one.html">
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
