--- a/pages/lab-one.html
+++ b/pages/lab-one.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 
     <head>
         <title>Chart Program</title>
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
-</head>
+
 
 <body>
      <h1>Lab 1</h1>
