--- a/pages/lab-one.html
+++ b/pages/lab-one.html
@@ -3,9 +3,10 @@
 
     <head>
         <title>Chart Program</title>
-        <link rel="stylesheet" type="text/css" href="assets/css/lab-one.css">
-        <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
+        <link rel="stylesheet" type="text/css" href="..assets/css/lab-one.css">
+        <link rel="stylesheet" type="text/css" href="..assets/css/styles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        
     </head>
 
 
