--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 				</div>
 				<!-- Project 3 -->
 				<div class="column">
-					<a href="../pages/assign-three.html">>
+					<a href="../pages/assign-three.html">
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
