--- a/pages/lab-one.html
+++ b/pages/lab-one.html
@@ -11,8 +11,8 @@
 
 
 <body>
-     <h1>Lab 1</h1>
-     <h1>Chart Program</h1>
+  <h1 style="text-align:center">Lab 1</h1>
+  <h1 style="text-align:center">Chart Program</h1>
       <div>
 			<canvas id="canvas_chart" width="600" height="600"></canvas>
 			<script src="../scripts/lab-one.js"></script>
@@ -22,5 +22,288 @@
 <div class="gist gist-data ">
      <script src="https://gist.github.com/solomiapobutska/b4f3b3e40dbc01a0dea93bcaf94579a2.js"></script>
 </div>
+
+<style>
+  canvas {
+	position: absolute;
+    top: 45%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    max-height: 100%;
+    max-width: 100%;
+}
+
+/* Set width to 600px, and center box */
+.gist {
+    padding-top: 300px;
+    margin-top: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 600px !important;    
+  }
+  
+/* Limit height and width of script box, and enable scrollbars */
+.gist-data {
+    height:250px;
+    overflow-y: visible;
+    width: 600px;
+    overflow-x: visible;
+}
+
+body .gist .highlight {
+    background: #272822;
+}
+body .gist .blob-num,
+body .gist .blob-code-inner,
+body .gist .pl-s2,
+body .gist .pl-stj {
+    color: #f8f8f2;
+}
+body .gist .pl-c1 {
+    color: #ae81ff;
+}
+body .gist .pl-enti {
+    color: #a6e22e;
+    font-weight: 700;
+}
+body .gist .pl-st {
+    color: #66d9ef;
+}
+body .gist .pl-mdr {
+    color: #66d9ef;
+    font-weight: 400;
+}
+body .gist .pl-ms1 {
+    background: #fd971f;
+}
+body .gist .pl-c,
+body .gist .pl-c span,
+body .gist .pl-pdc {
+    color: #75715e;
+    font-style: italic;
+}
+body .gist .pl-cce,
+body .gist .pl-cn,
+body .gist .pl-coc,
+body .gist .pl-enc,
+body .gist .pl-ens,
+body .gist .pl-kos,
+body .gist .pl-kou,
+body .gist .pl-mh .pl-pdh,
+body .gist .pl-mp,
+body .gist .pl-mp1 .pl-sf,
+body .gist .pl-mq,
+body .gist .pl-pde,
+body .gist .pl-pse,
+body .gist .pl-pse .pl-s2,
+body .gist .pl-mp .pl-s3,
+body .gist .pl-smi,
+body .gist .pl-stp,
+body .gist .pl-sv,
+body .gist .pl-v,
+body .gist .pl-vi,
+body .gist .pl-vpf,
+body .gist .pl-mri,
+body .gist .pl-va,
+body .gist .pl-vpu {
+    color: #66d9ef;
+}
+body .gist .pl-cos,
+body .gist .pl-ml,
+body .gist .pl-pds,
+body .gist .pl-s,
+body .gist .pl-s1,
+body .gist .pl-sol {
+    color: #e6db74;
+}
+body .gist .pl-e,
+body .gist .pl-ef,
+body .gist .pl-en,
+body .gist .pl-enf,
+body .gist .pl-enm,
+body .gist .pl-entc,
+body .gist .pl-entm,
+body .gist .pl-eoac,
+body .gist .pl-eoac .pl-pde,
+body .gist .pl-eoi,
+body .gist .pl-mai .pl-sf,
+body .gist .pl-mm,
+body .gist .pl-pdv,
+body .gist .pl-som,
+body .gist .pl-sr,
+body .gist .pl-vo {
+    color: #a6e22e;
+}
+body .gist .pl-ent,
+body .gist .pl-eoa,
+body .gist .pl-eoai,
+body .gist .pl-eoai .pl-pde,
+body .gist .pl-k,
+body .gist .pl-ko,
+body .gist .pl-kolp,
+body .gist .pl-mc,
+body .gist .pl-mr,
+body .gist .pl-ms,
+body .gist .pl-s3,
+body .gist .pl-smc,
+body .gist .pl-smp,
+body .gist .pl-sok,
+body .gist .pl-sra,
+body .gist .pl-src,
+body .gist .pl-sre {
+    color: #f92672;
+}
+body .gist .pl-mb,
+body .gist .pl-pdb {
+    color: #e6db74;
+    font-weight: 700;
+}
+body .gist .pl-mi,
+body .gist .pl-pdi {
+    color: #f92672;
+    font-style: italic;
+}
+body .gist .pl-pdc1,
+body .gist .pl-scp {
+    color: #ae81ff;
+}
+body .gist .pl-sc,
+body .gist .pl-sf,
+body .gist .pl-mo,
+body .gist .pl-entl {
+    color: #fd971f;
+}
+body .gist .pl-mi1,
+body .gist .pl-mdht {
+    color: #a6e22e;
+    background: rgba(0, 64, 0, .5);
+}
+body .gist .pl-md,
+body .gist .pl-mdhf {
+    color: #f92672;
+    background: rgba(64, 0, 0, .5);
+}
+body .gist .pl-mdh,
+body .gist .pl-mdi {
+    color: #a6e22e;
+    font-weight: 400;
+}
+body .gist .pl-ib,
+body .gist .pl-id,
+body .gist .pl-ii,
+body .gist .pl-iu {
+    background: #a6e22e;
+    color: #272822;
+}
+html,
+body {
+  font-size: 16px;
+  color: #dfdfdf;
+  background-color: #063647;
+}
+
+a {
+  color: #00d1b2;
+}
+
+a:hover {
+  color: #00d1b2;
+}
+
+section {
+  padding-top: 3rem;
+  padding-bottom: 3rem;
+}
+
+.section-1 {
+  background: #063647;
+}
+
+.section-2 {
+  background-color: #052d3d;
+}
+
+.section-3 {
+  background-color: #0e282e;
+}
+
+.section-4 {
+  background-color: #063647;
+  padding: 0.2rem;
+}
+
+a.nav-item {
+  color: #dfdfdf;
+}
+
+a.nav-item:hover {
+  color: #fff;
+}
+
+.avatar {
+  height: 300px;
+  border-radius: 50%;
+}
+
+.intro-description {
+  padding-top: 1rem;
+}
+
+.project-figure {
+  margin: 0 auto 1rem auto;
+  max-height: 256px;
+  max-width: 256px;
+}
+/*
+	.project-text {
+  	text-align: justify;
+	}
+*/
+
+.box {
+  background-color: transparent;
+  border: 2px solid rgba(7, 59, 79, 0.5);
+}
+
+.title {
+  color: #fff;
+  text-align: left;
+  margin-bottom: 2rem;
+}
+
+.intro {
+  text-align: justify;
+  width: 80%;
+  margin: 0 auto;
+}
+
+.void-background {
+  background-color: transparent;
+}
+
+.resume-container {
+  width: auto;
+}
+
+@media screen and (max-width: 768px) {
+  .nav-menu {
+    background-color: #063647;
+  }
+
+  .nav-toggle:hover {
+    background-color: transparent;
+  }
+
+  .nav-toggle span {
+    background-color: #dfdfdf;
+  }
+
+  .nav-toggle span:hover {
+    background-color: #fff;
+  }
+}
+
+</style>
 
 </html>
