--- a/pages/ass-one.html
+++ b/pages/ass-one.html
@@ -7,7 +7,9 @@
 </head>
 <html>
     <body>
-        
+        <body>
+            <h1 style="text-align:center">Assignment 1 - Cartoon</h1>
+            
         <div class="circular" id="test"></div>
         <canvas id="canvas" width="500" height="500"></canvas>        
     </body>
