--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</div>
 				<!-- Project 2 -->
 				<div class="column">
-					<a href="https://github.com/solomiapobutska">
+					<a href="../pages/assign-two.html">
 						<div class="box project-text">
 							<article>
 								<div style="color:aqua;">
