--- a/pages/assign-two.html
+++ b/pages/assign-two.html
@@ -14,7 +14,7 @@
 <h1>follow your heart</h1>
 
 <div id=thoughtbubble>  
-    <h2>Believe in Yourself,<br> Like I belive in You</h2>
+    <h2>Believe in Yourself,<br> Like I believe in You</h2>
   </div>
   
   
